--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,12 @@ version: 1.0
 main: me.lakshay.verifier.VerifierPlugin
 api-version: 1.21
 author: Lakshay
+
+commands:
+  verifier:
+    description: LakshayVerifier commands
+    usage: /verifier reload
+
+permissions:
+  verifier.reload:
+    default: op
